testsuite/bad/bad033.jl
int main() { 
    boolean b=false;
    if(b) return 0;
}
